load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "api",
    srcs = [
        "client.go",
    ],
    importpath = "go.ngrok.com/cmd/apic/gen/golang_client/_static/internal/api",
    visibility = ["//go/cmd/apic/gen/golang_client/_static:__subpackages__"],
    deps = ["@com_github_ngrok_ngrok_api_go_v4//:ngrok-api-go"],
)
